@@ -1,7 +1,6 @@
 use warnings;
 use v5.22;
 
-use Math::Random;
 use Data::Gimei::Random;
 
 use Test::More;
@@ -26,20 +25,6 @@ use Test::More;
 
     $r->set_seed(43);
     isnt $r->next_int(1024), $expected;
-}
-
-{    # calling rand(), random_uniform_integer().
-    my @array = qw(a b c);
-    my $r     = Data::Gimei::Random->new;
-
-    $r->set_seed(42);
-    my $expected = $r->sample( \@array );
-
-    random_uniform_integer( 1, 0, 1 );
-    rand(1);
-
-    $r->set_seed(42);
-    is $r->sample( \@array ), $expected;
 }
 
 done_testing;
