@@ -2,6 +2,8 @@ Revision history for Perl extension Data-Gimei
 
 {{$NEXT}}
 
+    - clean up old random number generator
+
 v0.3.0 2022-09-16T03:38:25Z
 
     - use faster random number generator
